# isYOU

./: .dockerignore  .env.example  .gitignore  API设计.md  Dockerfile  M1阶段验收总结报告.md  MVP.md  PRD.md  docker-compose.prod.yml  docker-compose.yml  iOS-App技术选型.md  pyproject.toml  上线剩余工作清单.md  交接文档.md  内容引擎实施计划.md  内容管线方案.md  真机冒烟Runbook.md
.github/workflows/: ci.yml
content_engine/: README.md  __init__.py  alembic.ini  eval_published_sample.csv  logging_config.py
content_engine/api/: __init__.py  app.py  deps.py  schemas.py
content_engine/config/: __init__.py  settings.py
content_engine/migrations/: env.py  init.sql  script.py.mako
content_engine/models/: __init__.py  base.py  billing.py  db.py  enums.py  observability.py  ops.py  schema.py
content_engine/services/: __init__.py  apns.py  auth.py  embedding.py  guard.py  llm_client.py  ranking.py  storekit.py
content_engine/stages/: __init__.py  classify.py  clean.py  cluster.py  collect.py  embed.py  evaluate.py  publish.py  recluster.py  run_all.py  score.py  seed_data.py  seed_sources.py  summarize.py  utils.py
content_engine/tasks/: __init__.py  billing_tasks.py  celery_app.py  pipeline_tasks.py  push_tasks.py
content_engine/tests/: test_analytics_api.py  test_api_smoke.py  test_apns_service.py  test_auth_api.py  test_billing_api.py  test_classify_llm.py  test_clean_semantic_dedup.py  test_cluster_embedding.py  test_db_source.py  test_embedding_service.py  test_evaluate.py  test_guard.py  test_llm_client.py  (+14 more)
ios/: README.md
mock_server/: db_source.py  server.py
pipeline_demo/: config.py  output.json  requirements.txt  run_pipeline.py
prototype/: admin.html  index.html  mock.html
scripts/: dev_up.sh
(+92 files in other folders)
