[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content_engine"
version = "0.1.0"
description = "「热读」AI 内容引擎：采集→清洗→分类→聚类→摘要→评分→护栏→发布"
readme = "content_engine/README.md"
requires-python = ">=3.10"
authors = [{ name = "isYOU team" }]

# 运行时依赖（生产化阶段 0 起步集合，后续阶段按需追加）
dependencies = [
    # 采集 / 清洗
    "feedparser>=6.0.0",
    "requests>=2.32.0",
    "certifi>=2024.2.2",
    # 精确去重（阶段 1.1：SimHash 64-bit 指纹 + 汉明距离）
    "simhash>=2.1.2",
    # ORM + 迁移
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.5",
    # Redis 榜单（阶段 3.4 用到，先装上）
    "redis>=5.0.0",
    # 配置
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # 调度（阶段 4.3 用到，先装上）
    "celery>=5.3.0",
    # HTTP API（阶段 1.5 FastAPI 服务层）
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    # 阶段 3.1：账号鉴权（本地 JWT 签发/校验 + Sign in with Apple identityToken 验签）
    "pyjwt[crypto]>=2.8.0",
    # Embedding（阶段 1.3：bge-small-zh-v1.5 本地推理）
    "sentence-transformers>=2.7.0",
    # HDBSCAN 离线复核（阶段 2.4）
    "scikit-learn>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    # FastAPI 单测
    "httpx>=0.27.0",
]

# 关键：从仓库根目录寻找 content_engine 这个 package
[tool.setuptools.packages.find]
where = ["."]
include = ["content_engine*"]
exclude = ["pipeline_demo*", "mock_server*", "prototype*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["content_engine/tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
